--- a/src/app/answer/answer.component.html
+++ b/src/app/answer/answer.component.html
@@ -6,10 +6,11 @@
                   <div class="x_title">
                     <h2 *ngIf='!answer?.number'>New Answer</h2>
                     <h2 *ngIf='answer?.number'>Edit Answer {{answer?.number}}</h2>
-                    {{message}}
+                    <br>
                      <div class="clearfix"></div>
                   </div>
-                  <app-message></app-message>        
+                  <app-message></app-message> 
+                  <div id="snackbar" [class]="snackClass">{{snackMessage}}</div>       
                   <div class="x_content">
                          <form class="form-horizontal form-label-left" novalidate>
                           <div class="item form-group">
@@ -154,7 +155,7 @@
                           <div class="ln_solid"></div>
                           <div class="form-group">
                             <div class="col-md-6 col-md-offset-3">
-                              <button type="submit" class="btn btn-primary">Cancel</button>
+                              <button *ngIf='answer?.number' type="button" (click)="backList()" class="btn btn-primary">Cancel</button>
                               <button id="save" type="submit" class="btn btn-success" (click)="saveAnswer(answer)">Save</button>
                             </div>
                           </div>
