--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -47,35 +47,42 @@
             </ul>
             <div class="clearfix"></div>
           </div>
+          <app-message></app-message>
           <div class="x_content" style="display:none">
 
             <div class="row">
 
               <div class="col-md-4 col-sm-12 col-xs-12 form-group">
-                <div id="reportrange_right" class="pull-left" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc">
+                <div  id="reportrange_right" class="pull-left" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc">
                   <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
-                  <span>December 30, 2014 - January 28, 2015</span>
-                  <b class="caret"></b>
-                </div>
+                  <span #filterDate >December 30, 2014 - January 28, 2015</span>
+                  <b  class="caret"></b>
+                 </div>
               </div>
-
+              
               <div class="col-md-2 col-sm-12 col-xs-12 form-group">
                 <div class="checkbox">
                   <label>
-                    <input type="checkbox" class="flat"> Just with feedback
+                    <input type="checkbox" (change)="reloadQuestions()" [(ngModel)]="filter.justFeedback"> Just with feedback
                   </label>
                 </div>
               </div>
 
-
               <div class="col-md-3 col-sm-12 col-xs-12 form-group">
-                <input type="text" placeholder="Ip" class="form-control">
+                <input type="text" (change)="reloadQuestions()" [(ngModel)]="filter.ipFilter" placeholder="Ip" class="form-control">
               </div>
 
 
               <div class="col-md-3 col-sm-12 col-xs-12 form-group">
-                <input type="text" placeholder="Question" class="form-control">
+                <input type="text" (change)="reloadQuestions()" [(ngModel)]="filter.question" placeholder="Question" class="form-control">
+                <br>
+                <div class="col-md-1 col-sm-1 col-xs-1 form-group">
+                    <button type="button" class="btn btn-success" (click)="reloadQuestions()">Filter</button>
+                </div>  
+
               </div>
+
+              
 
             </div>
 
@@ -93,7 +100,7 @@
       <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
           <div class="x_title">
-            <h2>Questions <span *ngIf='answerId'>from Answer Nº{{answerId}}</span></h2>
+            <h2>{{questions?.length}} Questions <span *ngIf='answerId'>from Answer Nº{{answerId}}</span></h2>
             <div class="clearfix"></div>
           </div>
 
