--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -97,7 +97,10 @@
         <div class="x_panel">
           <div class="x_title">
             <h2>{{questions?.length}} Questions <span *ngIf='answerId'>from Answer Nº{{answerId}}</span></h2>
+            &nbsp;
+            <button *ngIf='answerId' type="button" (click)="backList()" class="btn btn-primary">Back</button>
             <div class="clearfix"></div>
+            
           </div>
 
           <div class="x_content">
@@ -150,7 +153,5 @@
   </div>
 
 </div>
-<div class="col-md-6 col-md-offset-3">
-    <button *ngIf='answerId' type="button" (click)="backList()" class="btn btn-primary">Back</button>
-</div>
+
 
