--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,25 +1,21 @@
 <div class="right_col" role="main">
-    
-    <div class="x_title">
-      <h2>Users Access</h2>
-      <ul class="nav navbar-right panel_toolbox">
-        <li>
-          <a class="collapse-link">
-            <i class="fa fa-chevron-up"></i>
-          </a>
-        </li>
-      </ul>
-      <div class="clearfix"></div>
-    </div>
-
-
-    <div class="x_panel">
-      <div class="x_content">
-
-        <div id="user-chart-bar" style="height:350px;"></div>
-
+  <div class="x_panel">
+      <div class="x_title">
+        <h2>Users Access</h2>
+        <div class="nav navbar-right panel_toolbox">
+            <label class="control-label col-md-3 col-sm-3 col-xs-12">Year</label>
+            <div class="col-md-9 col-sm-9 col-xs-12">
+              <select class="form-control" (change)="loadGraph(yearSelect.value)" #yearSelect>
+                <option *ngFor="let year of years">{{year}}</option>
+              </select>
+            </div>
+          </div>
+        <div class="clearfix"></div>
       </div>
-    </div>
-
-
+      <app-message></app-message>
+      <div class="x_content">
+          <div id="user-chart-bar" style="height:350px;"></div>
+      </div>
   </div>
+</div>
+  
