--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -55,7 +55,7 @@
               <div class="col-md-4 col-sm-12 col-xs-12 form-group">
                 <div  id="reportrange_right" class="pull-left" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc">
                   <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
-                  <span #filterDate >December 30, 2014 - January 28, 2015</span>
+                  <span>December 30, 2014 - January 28, 2015</span>
                   <b  class="caret"></b>
                  </div>
               </div>
@@ -77,9 +77,6 @@
                 <input type="text" (change)="filterByText()" [(ngModel)]="filter.question" placeholder="Question" class="form-control">
                 <br>
              </div>
-             <div class="col-md-1 col-sm-1 col-xs-1 form-group">
-                <button type="button" class="btn btn-success" (click)="filterByDates()">Filter Dates</button>
-            </div>  
           </div>
 
           </div>
