--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -49,7 +49,7 @@
       </div>
     </div>
  
-  <div [hidden]="hideModal" class="modal fade video-dialog" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal fade video-dialog" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
 
