--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,10 +9,10 @@
               <form>
                 <h1>Login Form</h1>
                 <div>
-                  <input #user type="text" class="form-control" placeholder="Username" required="" />
+                  <input #user type="text" autocomplete="true" class="form-control" placeholder="Username" required="true" />
                 </div>
                 <div>
-                  <input #password type="password" class="form-control" placeholder="Password" required="" />
+                  <input #password type="password" autocomplete="true" class="form-control" placeholder="Password" required="true" />
                 </div>
                 <div>
                   <a class="btn btn-default submit" (click)="login(user.value,password.value)" >Log in</a>
