--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -1,5 +1,6 @@
 <div class="right_col" role="main">
 
+
   <div id="totals" *ngIf='!answerId'>
     <div class="row tile_count">
       <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
@@ -7,7 +8,7 @@
           <i class="fa fa-question"></i> Total Questions</span>
         <div class="count green">{{statistic?.totalQuestion | number}}</div>
       </div>
-       <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
+      <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
         <span class="count_top">
           <i class="fa fa-user"></i> Total Users</span>
         <div class="count">{{statistic?.totalUsers | number}}</div>
@@ -35,7 +36,7 @@
       <div class="col-md-12 col-sm-12 col-xs-12">
 
         <div class="x_panel">
-          <div class="x_title" >
+          <div class="x_title">
             <h2>Filter
             </h2>
             <ul class="nav navbar-right panel_toolbox">
@@ -53,17 +54,17 @@
             <div class="row">
 
               <div class="col-md-4 col-sm-12 col-xs-12 form-group">
-                <div  id="reportrange_right" class="pull-left" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc">
+                <div id="reportrange_right" class="pull-left" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc">
                   <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
                   <span>December 30, 2014 - January 28, 2015</span>
-                  <b  class="caret"></b>
-                 </div>
+                  <b class="caret"></b>
+                </div>
               </div>
-              
+
               <div class="col-md-2 col-sm-12 col-xs-12 form-group">
                 <div class="checkbox">
                   <label>
-                    <input type="checkbox" class="flat" > Just with feedback
+                    <input type="checkbox" class="flat"> Just with feedback
                   </label>
                 </div>
               </div>
@@ -76,8 +77,8 @@
               <div class="col-md-3 col-sm-12 col-xs-12 form-group">
                 <input type="text" (change)="filterByText()" [(ngModel)]="filter.question" placeholder="Question" class="form-control">
                 <br>
-             </div>
-          </div>
+              </div>
+            </div>
 
           </div>
         </div>
@@ -93,14 +94,18 @@
       <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
           <div class="x_title">
-            <h2>{{questions?.length}} Questions <span *ngIf='answerId'>from Answer Nº{{answerId}}</span></h2>
+            <h2>{{questions?.length}} Questions
+              <span *ngIf='answerId'>from Answer Nº{{answerId}}</span>
+            </h2>
             &nbsp;
             <button *ngIf='answerId' type="button" (click)="backList()" class="btn btn-primary">Back</button>
             <div class="clearfix"></div>
-            
+
           </div>
 
           <div class="x_content">
+
+
 
             <div class="table-responsive">
               <table class="table table-striped jambo_table bulk_action">
@@ -123,13 +128,13 @@
                 </thead>
 
                 <tbody>
-                  <tr class="even pointer" *ngFor="let question of questions" >
+                  <tr class="even pointer" *ngFor="let question of questions">
                     <td class=" ">{{question.date}}</td>
                     <td class=" ">{{question.ip}}</td>
                     <td class=" ">{{question.country}}</td>
                     <td class=" ">{{question.text}}</td>
                     <td class=" last">
-                      <a routerLink="/question-detail/{{question.id}}">View</a>
+                      <a (click)="openDetail(question.id)" onmouseover="this.style.cursor='pointer';">View</a>
                     </td>
                   </tr>
 
@@ -137,18 +142,97 @@
               </table>
             </div>
 
-             
+
 
           </div>
-          
+
         </div>
-        
+
       </div>
-     
+
     </div>
-    
+
   </div>
 
 </div>
 
 
+<!-- The overlay -->
+<div #divDetail class="overlay">
+  <!-- Button to close the overlay navigation -->
+  <a href="javascript:void(0)" class="closebtn" (click)="closeDetail()">&times;</a>
+  <!-- Overlay content -->
+  <div class="overlay-content" *ngIf='question'>
+
+      <div class="">
+          <div class="page-title">
+            <div class="title_left">
+              <h3>Question : "{{question.text}}"</h3>
+            </div>
+          </div>
+    
+          <div class="clearfix"></div>
+    
+          <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+              <app-message></app-message>
+    
+              <div class="x_content">
+                <div class="col-md-3 col-sm-3 col-xs-12 profile_left">
+    
+                  <h3>{{question.creator}}</h3>
+    
+                  <ul class="list-unstyled user_data">
+                    <li>
+                      <i class="fa fa-map-marker user-profile-icon"></i> {{question.country}} (IP:{{question.ip}})
+                    </li>
+    
+                    <li class="m-top-xs" *ngIf="question.email">
+                      <i class="fa fa-envelope-o user-profile-icon"></i> {{question.email}}
+                    </li>
+    
+                    <li class="m-top-xs">
+                      <i class="fa fa-clock-o user-profile-icon"></i> {{question.date}}
+                    </li>
+                  </ul>
+    
+    
+                </div>
+                <div class="col-md-9 col-sm-9 col-xs-12">
+    
+                  <div class="profile_title">
+                    <div class="x_content">
+    
+                      <div class="tab-pane active" id="home">
+                        <p class="lead">{{question.answer.number}} - {{question.answer.question}}</p>
+    
+                        <p [innerHTML]='question.answer.content'></p>
+                        <blockquote class="blockquote-reverse">
+                          <footer>From video {{question.answer.videoNumber}} # -
+                            <cite title="Source Title">{{question.answer.date}}</cite>
+                          </footer>
+                        </blockquote>
+                      </div>
+    
+                    </div>
+                  </div>
+                  <ul class="messages" *ngIf="question.feedback">
+                    <li>
+                      <img src="assets/images/img.jpg" class="avatar" alt="Avatar">
+                      <div class="message_wrapper">
+                        <h4 class="heading">Comments</h4>
+                        <blockquote class="message">{{question.feedback}}</blockquote>
+                        <br />
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+    
+              </div>
+            </div>
+          </div>
+        </div>
+
+    
+  </div>
+</div>
